--- a/index.html
+++ b/index.html
@@ -16,24 +16,7 @@ body {
 <body>
 <h1>Welcome to Our Movie Ticket System</h1>
 
-<h2>Now Showing:</h2>
-
-<div id="movieList">
-  <!-- Movie listings will be dynamically added here -->
-  <div class="movie">
-    <h3>Movie Title 1</h3>
-    <p>Synopsis...</p>
-    <p>Showtimes...</p>
-  </div>
-  <div class="movie">
-    <h3>Movie Title 2</h3>
-    <p>Synopsis...</p>
-    <p>Showtimes...</p>
-  </div>
-  <!-- Add more movie divs as needed -->
-</div>
-
-<button onclick="location.href='select_seats.html'">Select Seats</button>
+<button onclick="location.href='login.php'">Proceed to Log in</button>
 
 
 <script>
