--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@ body {
 <body>
 <h1>Welcome to Our Movie Ticket System</h1>
 
-<button onclick="location.href='login.php'">Proceed to Log in</button>
+<form action="login.php" method="POST">
+  <button type="submit">Proceed to Log in</button>
+</form>
 
 
 <script>
