--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@ body {
 <body>
 <h1>Welcome to Our Movie Ticket System</h1>
 
-<form action="login.php" method="POST">
-  <button type="submit">Proceed to Log in</button>
-</form>
+<a href="login.php">Proceed to Login</a>
 
 
 <script>
