--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ body {
 <body>
 <h1>Welcome to Our Movie Ticket System</h1>
 
-<a href="login.php">Proceed to Login</a>
+<a href="login.html">Proceed to Login</a>
 
 
 <script>
