--- a/register.html
+++ b/register.html
@@ -9,7 +9,7 @@
         <label for="password">Password:</label>
         <input type="password" name="password" required><br><br>
         <button type="submit">Register</button>
-        <p>Already have an account? <a href='login.php'>Login here</a></p>
+        <p>Already have an account? <a href='login.html'>Login here</a></p>
     </form>
 </body>
 </html>
