--- a/login.html
+++ b/login.html
@@ -1,39 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <script>
-        function login(event) {
-            event.preventDefault();
-            let formData = new FormData(document.getElementById("loginForm"));
+<html>
 
-            fetch("login.php", {
-                method: "POST",
-                body: formData
-            })
-            .then(response => response.json())
-            .then(data => {
-                if (data.success) {
-                    window.location.href = "dashboard.php";
-                } else {
-                    document.getElementById("error").innerText = data.error;
-                }
-            })
-            .catch(error => console.error("Error:", error));
-        }
-    </script>
-</head>
 <body>
-    <h2>Login</h2>
-    <p id="error" style="color:red;"></p>
-    <form id="loginForm" onsubmit="login(event)">
+    <form method="POST" action="">
+        <h2>Login</h2>
         <label for="username">Username:</label>
         <input type="text" name="username" required><br><br>
         <label for="password">Password:</label>
         <input type="password" name="password" required><br><br>
         <button type="submit">Login</button>
+        <p>Don't have an account? <a href="register.html">Register here</a></p>
     </form>
 </body>
 </html>
