--- a/login.html
+++ b/login.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login</title>
+</head>
 <body>
+    <h2>Login</h2>
+    <?php if (!empty($error)) echo "<p style='color:red;'>$error</p>"; ?>
     <form method="POST" action="">
-        <h2>Login</h2>
         <label for="username">Username:</label>
         <input type="text" name="username" required><br><br>
         <label for="password">Password:</label>
         <input type="password" name="password" required><br><br>
         <button type="submit">Login</button>
-        <p>Don't have an account? <a href="register.html">Register here</a></p>
     </form>
+    <p>Don't have an account? <a href="register.php">Register here</a></p>
 </body>
 </html>
