--- a/login.html
+++ b/login.html
@@ -15,6 +15,6 @@
         <input type="password" name="password" required><br><br>
         <button type="submit">Login</button>
     </form>
-    <p>Don't have an account? <a href="register.php">Register here</a></p>
+    <p>Don't have an account? <a href="register.html">Register here</a></p>
 </body>
 </html>
