--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
         <input type="text" name="username" required><br><br>
         <label for="password">Password:</label>
         <input type="password" name="password" required><br><br>
-        <button type="submit">Login</button>
+        <a href='login.html'>Login here</a>
     </form>
     <p>Don't have an account? <a href="register.html">Register here</a></p>
 </body>
