--- a/register.html
+++ b/register.html
@@ -8,7 +8,7 @@
         <input type="text" name="username" required><br><br>
         <label for="password">Password:</label>
         <input type="password" name="password" required><br><br>
-        <button type="submit">Register</button>
+        <a href='login.html'>Register</a>
         <p>Already have an account? <a href='login.html'>Login here</a></p>
     </form>
 </body>
